--- a/index.html
+++ b/index.html
@@ -38,4 +38,54 @@
   }
 
   img {
-    width: 1
+    width: 100%;
+    height: auto;
+    max-height: 100vh;
+    object-fit: contain;
+  }
+
+  #splash {
+    cursor: pointer;
+  }
+
+  /* Hide the Elfsight audio player */
+  .elfsight-app-bdab7848-46ab-4feb-8d28-e6e5ce731a05 {
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    top: -9999px;
+  }
+</style>
+</head>
+<body>
+
+<!-- Splash Page -->
+<div id="splash" class="fullscreen">
+  <img src="https://raw.githubusercontent.com/prophetmind25-dotcom/kira-role-card/refs/heads/main/Touch%20To%20Reveal%20Your%20Fate.png" alt="Touch to Reveal Your Fate">
+</div>
+
+<!-- Role Card Page -->
+<div id="roleCard" class="fullscreen">
+  <img src="https://raw.githubusercontent.com/prophetmind25-dotcom/kira-role-card/760a4201f7f557fefbb404cc8f59ab630ecc3cf1/Kira%20Role%20Card.png" alt="Kira Role Card">
+  
+  <!-- Elfsight Audio Player -->
+  <script src="https://elfsightcdn.com/platform.js" async></script>
+  <div class="elfsight-app-bdab7848-46ab-4feb-8d28-e6e5ce731a05" data-elfsight-app-lazy></div>
+</div>
+
+<script>
+  const splash = document.getElementById('splash');
+  const roleCard = document.getElementById('roleCard');
+
+  splash.addEventListener('click', () => {
+    // Fade out splash
+    splash.style.opacity = 0; 
+    setTimeout(() => { splash.style.display = 'none'; }, 1000); 
+    // Fade in role card
+    roleCard.classList.add('show'); 
+  });
+</script>
+
+</body>
+</html>
